--- a/mulam/frontmatter/preface-mulam.tex
+++ b/mulam/frontmatter/preface-mulam.tex
@@ -1,14 +1,14 @@
 % !TeX program = XeLaTeX
 % !TeX root = ./ramayana-sangraha-mulam.tex
 {\font \x="Sanskrit 2003:script=deva" at 12pt\x
-\centerline{॥ॐ श्री-गणेशाय नमः॥}
-\centerline{॥ॐ श्री-गुरुभ्यो नमः॥}
-\centerline{॥हरिः ॐ॥}
+\centerline{॥श्री-गणेशाय नमः॥}
+\centerline{॥श्री-गुरुभ्यो नमः॥}
+\centerline{॥श्री-सीता-लक्ष्मण-भरत-शत्रुघ्न-हनुमत्-समेत-श्री-रामचन्द्राय नमः॥}
 }
 \thispagestyle{empty}
 
 \begin{center}
-\chapter*{\texorpdfstring{\scshape{Preface}}{Preface}}
+\chapter*{{प्रस्तावना}}
 \end{center}
 
 \twolineshloka*{सदाशिवसमारम्भां शङ्कराचार्यमध्यमाम्}
@@ -18,11 +18,13 @@
 {एष सेतुर्विधरणो लोकासम्भेदहेतवे}
 {कोदण्डेन च दण्डेन रामेण गुरुणा कृतः}
 
-रामायण-श्रोतॄणां कदापि तृप्तिर्न जायते! यथा भगवान् वाल्मीकिः वदति--- ``रामो रामो राम इति प्रजानामभवन् कथाः'', तद्वत् इतिहासपुराणानामपि श्रीरामचन्द्रस्य बहवः कथाः यत्र कुत्रापि लभ्यन्ते। तेषाम् एकत्र प्रस्तुतिं कर्तुम् एतत् परिश्रमः। सीतादेवी अपि अध्यात्मरामायणे रामस्य अरण्यगमनप्रसङ्गे वदति---
+रामायण-श्रोतॄणां कदापि तृप्तिर्न जायते! यथा भगवान् वाल्मीकिः वदति--- ``रामो रामो राम इति प्रजानामभवन् कथाः'', तद्वत् इतिहासपुराणेष्वपि श्रीरामचन्द्रस्य बह्व्यः कथाः यत्र कुत्रापि लभ्यन्ते। तेषाम् एकत्र प्रस्तुतिं कर्तुम् एषः प्रयासः। सीतादेवी अपि अध्यात्मरामायणे रामस्य अरण्यगमनप्रसङ्गे वदति---
 
-``रामायणानि बहुशः श्रुतानि बहुभिर्द्विजैः॥२-४-७७॥'' 
+\centerline{``रामायणानि बहुशः श्रुतानि बहुभिर्द्विजैः॥२-४-७७॥''} 
 
-अत्र अनेकरामकथाः प्रस्तुताः सन्ति। तासां वक्तॄन् व्यासं वाल्मीकिं च नमस्कृत्य एतस्य ग्रन्थस्य पारायणम् आरभामहे। रामे अनन्यभक्तिः सदा भवतु नः। 
+अस्मिन् ग्रन्थे अनेकरामकथाः प्रस्तुताः सन्ति। यद्यपि बह्व्यः कथाः श्रीमाद्वाल्मीकिरामायण\-मनुसृत्य एव वर्तन्ते, काश्चित् कथाः तदतिक्रम्य अपि अन्यकल्पेषु ये केचित्विचित्राः कथाप्रसङ्गाः सन्ति तान् अनुगच्छन्ति (यथा पद्मपुराणे श्रीरामचन्द्रः स्वयं महादेवं पृच्छति!)। काश्चित् कथाः श्रीमद्वाल्मीकिरामायणस्य अन्तर्गत-घट्टानां विस्तृतप्रस्तुतिं कुर्वन्ति।
+
+एतासां कथानां वक्तॄन् व्यासं वाल्मीकिं च नमस्कृत्य एतस्य ग्रन्थस्य पारायणम् आरभामहे। रामे अनन्यभक्तिः सदा भवतु नः। 
 
 \twolineshloka*
 {नारायणं नमस्कृत्य नरं चैव नरोत्तमम्}
@@ -45,8 +47,7 @@
 {नमोऽस्तु रामाय सलक्ष्मणाय देव्यै च तस्यै जनकात्मजायै}
 {नमोऽस्तु रुद्रेन्द्रयमानिलेभ्यो नमोऽस्तु चन्द्रार्कमरुद्गणेभ्यः}
 
-
-बलं विष्णोः प्रवर्धताम्!
+यथा श्रीमद्भगवद्\-गीतायां भगवान् श्रीकृष्ण आह, ``कथयन्तश्च मां नित्यं तुष्यन्ति च रमन्ति च॥'' तथा वयं सर्वेऽपि रामकथामृतं श्रुत्वा परस्परं च कथयित्वा रामस्य अनन्तकल्याणगुणान् अनुभूय तुष्टिं प्राप्नुयामः! बलं विष्णोः प्रवर्धताम्!\\
 
 
 
