--- a/mulam/shloka.sty
+++ b/mulam/shloka.sty
@@ -430,4 +430,4 @@
 }
 
 \RequirePackage{bbding}
-\newcommand{\closesection}{\medskip\centerline{\EightFlowerPetal\EightFlowerPetal\EightFlowerPetal}}
+\newcommand{\closesection}{\medskip\centerline{\EightFlowerPetal\EightFlowerPetal\EightFlowerPetal}\clearpage}
