--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -26,8 +26,14 @@
 \sectionmark{\mbox{}}
 \clearpage
 \begin{center}
+    \input{valmiki-ramayanam/SankshepaRamayanam.tex}
+    \input{valmiki-ramayanam/KavyaSankshepa.tex}
+    \input{valmiki-ramayanam/RamavrttaSamshrava.tex}
+    \input{valmiki-ramayanam/HanumajjanakiSamvada.tex}
+    \input{valmiki-ramayanam/Hanumadupadesha.tex}
+    \input{valmiki-ramayanam/HanumadBharataSambhashanam.tex}
+    
 \end{center}
-\closesection
 
 
 \newpage\mbox{}
