--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -10,10 +10,7 @@
 
 \sect{अध्यायः २७५}
 
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
-
+\uvacha{मार्कण्डेय उवाच}
 
 \twolineshloka
 {प्राप्तमप्रतिमं दुःखं रामेण भरतर्षभ}
@@ -25,27 +22,29 @@
 {मायामास्थाय तरसा हत्वा गृध्रं जटायुषम्}
 
 
-\threelineshloka
+\twolineshloka
 {प्रत्याजहार तां रामः सुग्रीवबलमाश्रितः}
-{बद्ध्वा सेतुं समुद्रस्य दग्ध्वा लङ्कां शितैः शरैः ॥युधिष्ठिर उवाच}
-{}
+{बद्ध्वा सेतुं समुद्रस्य दग्ध्वा लङ्कां शितैः शरैः}
+
+\uvacha{युधिष्ठिर उवाच}
 
 
 \twolineshloka
-{कस्मिन्नामः कुले जातः किंवीर्यः किंपराक्रमः}
-{रावणः कस्य पुत्रो वा किं वैरं तस् तेन ह}
+{कस्मिन् रामः कुले जातः किंवीर्यः किम्पराक्रमः}
+{रावणः कस्य पुत्रो वा किं वैरं तस्य तेन ह}
 
 
-\fourlineindentedshloka
+\threelineshloka
 {एतन्मे भगवन्सर्वं सम्यगाख्यातुमर्हसि}
-{`त्वया प्रत्यक्षोदृष्टं यथासर्वमशेषतः}
-{'श्रोतुमिच्छामि चरितं रामस्याक्लिष्टकर्मणः ॥मार्कण्डेय उवाच}
-{}
+{त्वया प्रत्यक्षतो दृष्टं यथासर्वमशेषतः}
+{श्रोतुमिच्छामि चरितं रामस्याक्लिष्टकर्मणः}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
-{अजोनामाभवद्राजा महानिक्ष्वाकुवंशजः}
-{तस् पुत्रो दशरथःशश्वत्स्वाध्यायवाञ्छुचिः}
+{अजो नामाभवद्राजा महानिक्ष्वाकुवंशजः}
+{तस्य पुत्रो दशरथः शश्वत्स्वाध्यायवाञ्छुचिः}
 
 
 \twolineshloka
@@ -104,15 +103,12 @@
 
 
 \sect{अध्यायः २७६}
+\uvacha{मार्कण्डेय उवाच}
+
+
 \twolineshloka
-{मार्कण्डेय उवाच}
-{}
-
-
-\threelineshloka
-{पुलस्त्यस् तु यः क्रोधादर्धदेहोऽभवन्मुनिः}
+{पुलस्त्यस्तु यः क्रोधादर्धदेहोऽभवन्मुनिः}
 {विश्रवानाम सक्रोधं पितरं राक्षसेश्वरः}
-{}
 
 
 \twolineshloka
@@ -226,10 +222,11 @@
 {तथैव तानि ते देहे भविष्यन्ति यथेप्सया}
 
 
-\threelineshloka
+\twolineshloka
 {वैरूप्यं च न ते देहे कामरूपधरस्तथा}
-{भविष्यसि रणेऽरीणां विजेता न च संशयः ॥रावण उवाच}
-{}
+{भविष्यसि रणेऽरीणां विजेता न च संशयः}
+
+\uvacha{रावण उवाच}
 
 
 \threelineshloka
@@ -238,10 +235,11 @@
 {}
 
 
-\threelineshloka
+\twolineshloka
 {य एते कीर्तिताः सर्वे न तेभ्योस्ति भयं रतव}
-{ऋते मनुष्याद्भद्रं ते तथा तद्विहितं मया ॥मार्कण्डेय उवाच}
-{}
+{ऋते मनुष्याद्भद्रं ते तथा तद्विहितं मया}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -251,14 +249,15 @@
 
 \threelineshloka
 {कुम्भकर्णमथोवाच तथैव प्रपितामहः}
-{`वरं वृणीष्व भद्रं ते प्रीतोस्मीति पुनःपुनः'}
+{वरं वृणीष्व भद्रं ते प्रीतोस्मीति पुनःपुनः}
 {स वव्रे महतीं निद्रां तमसा ग्रस्तचेतनः}
 
 
-\threelineshloka
+\twolineshloka
 {तथाभविष्यतीत्युक्त्वा विभीषणमुवाच ह}
-{वरं वृणीष्व पुत्र त्वं प्रीतोऽस्मीति पुनःपुनः ॥विभीषण उवाच}
-{}
+{वरं वृणीष्व पुत्र त्वं प्रीतोऽस्मीति पुनःपुनः}
+
+\uvacha{विभीषण उवाच}
 
 
 \threelineshloka
@@ -267,10 +266,11 @@
 {}
 
 
-\threelineshloka
+\twolineshloka
 {यस्माद्राक्षसयोनौ ते जातस्यामित्रकर्शन}
-{नाधर्मे धीयते बुद्धिरमरत्वं ददानि ते ॥मार्कण्डेय उवाच}
-{}
+{नाधर्मे धीयते बुद्धिरमरत्वं ददानि ते}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -346,10 +346,11 @@
 {विहितं तत्रयत्कार्यमभितस्तस्य निग्रहः}
 
 
-\threelineshloka
+\twolineshloka
 {तदर्थमवतीर्णोऽसौ मन्नियोगाच्चतुर्भुजः}
-{विष्णुः प्रहरतां श्रेष्ठः स तत्कर्म करिष्यति ॥मार्कण्डेय उवाच}
-{}
+{विष्णुः प्रहरतां श्रेष्ठः स तत्कर्म करिष्यति}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -363,8 +364,8 @@
 
 
 \twolineshloka
-{`ते यथोक्ता भगवता तत्प्रतिश्रुत्य शासनम्}
-{ससृजुर्देवगन्धर्वाः पुत्रान्वानररूपिणः'}
+{ते यथोक्ता भगवता तत्प्रतिश्रुत्य शासनम्}
+{ससृजुर्देवगन्धर्वाः पुत्रान्वानररूपिणः}
 
 
 \twolineshloka
@@ -373,14 +374,14 @@
 
 
 \threelineshloka
-{`अवतेरुर्महीं स्वर्गादंशैश्च सहिताः सुराः}
+{अवतेरुर्महीं स्वर्गादंशैश्च सहिताः सुराः}
 {ऋषयश्च महात्मानः सिद्धाश्च सह किन्नरैः}
 {चारणाश्चासृजन्घोरान्वानरान्वनचारिणः}
 
 
 \twolineshloka
 {यस्य देवस्य यद्रूपं वेषस्तेजश्च यद्विधम्}
-{अजायन्त समास्तेन तस्य तस्य सुतास्तदा'}
+{अजायन्त समास्तेन तस्य तस्य सुतास्तदा}
 
 
 \twolineshloka
@@ -434,10 +435,11 @@
 {प्रस्थानकारणं ब्रह्मञ्श्रोतुमिच्छामि कथ्यताम्}
 
 
-\threelineshloka
+\twolineshloka
 {कथं दाशरथी वीरौ भ्रातरौ रामलक्ष्मणौ}
-{प्रस्तापितौ वने ब्रह्मन्मैथिली च यशस्विनी ॥मार्कण्डेय उवाच}
-{}
+{प्रस्तापितौ वने ब्रह्मन्मैथिली च यशस्विनी}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -506,8 +508,8 @@
 
 
 \twolineshloka
-{`श्व एवपुष्यो भविता यत्ररामः सुतो मया}
-{यौवराज्येऽभिषेक्तव्यः पौरेषु सहमन्त्रिभिः'}
+{श्व एवपुष्यो भविता यत्ररामः सुतो मया}
+{यौवराज्येऽभिषेक्तव्यः पौरेषु सहमन्त्रिभिः}
 
 
 \twolineshloka
@@ -538,7 +540,7 @@
 \fourlineindentedshloka
 {सत्यप्रतिज्ञ यन्मे त्वं काममेकं विसृष्टवान्}
 {उपाकुरुष्व तद्राजंस्तस्मान्मुञ्चस्व संकटात्}
-{`तदद्य कुरु सत्यं मे वरं वरद भूपते' ॥राजोवाच}
+{तदद्य कुरु सत्यं मे वरं वरद भूपते' ॥राजोवाच}
 {}
 
 
@@ -568,8 +570,8 @@
 
 
 \twolineshloka
-{`नव पञ्च च वर्षाणि दण्डकारण्यमाश्रितः}
-{चीराजिनजटाधारी रामो भवतु तापसः'}
+{नव पञ्च च वर्षाणि दण्डकारण्यमाश्रितः}
+{चीराजिनजटाधारी रामो भवतु तापसः}
 
 
 \twolineshloka
@@ -633,7 +635,7 @@
 
 
 \twolineshloka
-{`उवाच प्राञ्जलिर्भूत्वाप्रणिपत्य रघूत्तमम्}
+{उवाच प्राञ्जलिर्भूत्वाप्रणिपत्य रघूत्तमम्}
 {शशंस मरणं राज्ञः सोऽनाथांश्चापि कोसलान्}
 
 
@@ -647,7 +649,7 @@
 \threelineshloka
 {अब्रवीत्स तदारामो भ्रातरं भ्रातृवत्सलम्}
 {पादुके मे भविष्येते राज्यगोप्त्र्यौ परंतप}
-{एवमस्त्विति तं प्राह भरतः प्रणतस्तदा'}
+{एवमस्त्विति तं प्राह भरतः प्रणतस्तदा}
 
 
 \twolineshloka
@@ -721,8 +723,8 @@
 
 
 \twolineshloka
-{`ततो ज्ञातिवधं श्रुत्वा रावणः कालचोदितः}
-{रामस्य वधमाकाङ्क्षन्मारीचं मनसागमत्'}
+{ततो ज्ञातिवधं श्रुत्वा रावणः कालचोदितः}
+{रामस्य वधमाकाङ्क्षन्मारीचं मनसागमत्}
 
 
 \twolineshloka
@@ -909,7 +911,7 @@
 
 \twolineshloka
 {यतिवेपप्रतिच्छन्नो जिहीर्षुस्तामनिन्दिताम्}
-{`उपागच्छत्स वैदेहीं रावणः पापनिश्चयः'}
+{उपागच्छत्स वैदेहीं रावणः पापनिश्चयः}
 
 
 \twolineshloka
@@ -939,11 +941,11 @@
 
 \twolineshloka
 {प्रपतेद्द्यौः सनक्षत्रा पृथिवी शकलीभवेत्}
-{`शुष्येत्तोयनिधौ तोयं चन्द्रः शीतांशुतां त्यजेत्}
+{शुष्येत्तोयनिधौ तोयं चन्द्रः शीतांशुतां त्यजेत्}
 
 
 \twolineshloka
-{उष्णांशुत्वमथो जह्यादादित्यो वह्निरुष्णताम्'}
+{उष्णांशुत्वमथो जह्यादादित्यो वह्निरुष्णताम्}
 {त्यक्त्वाशैत्यं भजेन्नाहं त्यजेयंरघुनन्दनम्}
 
 
@@ -1157,7 +1159,7 @@
 
 \threelineshloka
 {मा विषीद नरव्याघ्र नैष कश्चिन्मयि स्थिते}
-{`शक्तो धर्षयितुं वीर सुमित्रानन्दवर्धन'}
+{शक्तो धर्षयितुं वीर सुमित्रानन्दवर्धन}
 {छिन्ध्यस्य दक्षिणं बाहुं छिन्नः सव्यो मया भुजः}
 
 
@@ -1283,8 +1285,8 @@
 
 
 \twolineshloka
-{`ततः सीतां हृतां श्रुत्वा सुग्रीवो वालिना कृतम्}
-{दुःखमाख्यातवान्सर्वं रामायामिततेजसे'}
+{ततः सीतां हृतां श्रुत्वा सुग्रीवो वालिना कृतम्}
+{दुःखमाख्यातवान्सर्वं रामायामिततेजसे}
 
 
 \twolineshloka
@@ -1653,7 +1655,7 @@
 \threelineshloka
 {सन्ति मे देवक्न्याश्च गन्धर्वाणआं च योषितः}
 {सन्ति दानवन्याश् दैत्यानां चापि योषितः}
-{`तासामद्यविशालाक्षि सर्वासां मे भवोत्तमा}
+{तासामद्यविशालाक्षि सर्वासां मे भवोत्तमा}
 
 
 \twolineshloka
@@ -1697,7 +1699,7 @@
 
 
 \twolineshloka
-{`व्यवस्थाप्यकथंचित्सा विषादादतिमोहिता'}
+{व्यवस्थाप्यकथंचित्सा विषादादतिमोहिता}
 {उवाच वाक्यं तं क्षुद्रं वैदेही पतिदेवता}
 
 
@@ -2015,7 +2017,7 @@
 
 \twolineshloka
 {निर्दग्धपक्षः पतितो ह्यहमस्मिन्महागिरौ}
-{`द्रष्टुं वीरं न शक्नोमि भ्रातरं वै जटायुषम्'}
+{द्रष्टुं वीरं न शक्नोमि भ्रातरं वै जटायुषम्}
 
 
 \twolineshloka
@@ -2111,7 +2113,7 @@
 
 \twolineshloka
 {भवता पुरुषव्याघ्र प्रत्यभिज्ञानकारणात्}
-{`एकाक्षिविकलः काकः सुदुष्टात्मा कृतश्चवै'}
+{एकाक्षिविकलः काकः सुदुष्टात्मा कृतश्चवै}
 
 
 \twolineshloka
@@ -2304,7 +2306,7 @@
 \threelineshloka
 {मार्गमिच्छामि सैन्यस्य दत्तं नदनदीपते}
 {येन गत्वादशग्रीवं हन्याम कुलपांसनम्}
-{`राक्षसंसानुबन्धं तं मम भार्यापहारिणम्'}
+{राक्षसंसानुबन्धं तं मम भार्यापहारिणम्}
 
 
 \twolineshloka
@@ -2860,7 +2862,7 @@
 
 \twolineshloka
 {तमभ्येत्याशु हरयः परिवब्रुः समन्ततः}
-{`शैलवृक्षायुधा नादानमुञ्चन्भीषणास्ततः'}
+{शैलवृक्षायुधा नादानमुञ्चन्भीषणास्ततः}
 
 
 \twolineshloka
@@ -2920,7 +2922,7 @@
 
 \twolineshloka
 {तथा स भिन्नहृदयः समुत्सृज्य कपीश्वरम्}
-{`वेगेन महताऽऽविष्टस्तिष्ठतिष्ठेति चाब्रवीत्}
+{वेगेन महताऽऽविष्टस्तिष्ठतिष्ठेति चाब्रवीत्}
 
 
 \twolineshloka
@@ -3071,7 +3073,7 @@
 
 \twolineshloka
 {ते निकृत्ताः शरैस्तीक्ष्णैर्न्यपतन्धरणीतले}
-{`साधका रावणेराजौ शतशः शकलीकृताः}
+{साधका रावणेराजौ शतशः शकलीकृताः}
 
 
 \twolineshloka
@@ -3247,11 +3249,11 @@
 
 \twolineshloka
 {तस्येषून्पावकस्पर्शैः सौमित्रिः पत्रिभिस्त्रिभिः}
-{`वारयामास नाराचैः सौमित्रिर्मित्रनन्दनः}
+{वारयामास नाराचैः सौमित्रिर्मित्रनन्दनः}
 
 
 \twolineshloka
-{असृजल्लक्ष्मणश्चाष्टौ राक्षसाय शरान्पुनः'}
+{असृजल्लक्ष्मणश्चाष्टौ राक्षसाय शरान्पुनः}
 {तथा तं न्यहनद्वीरस्तन्मे निगदतः शृणु}
 
 
@@ -3267,7 +3269,7 @@
 
 \twolineshloka
 {विनिकृत्तभुजस्कन्धः कबन्धाकृतिदर्शनः}
-{`पपात वसुधायां तु छिन्नमूल इवद्रुमः'}
+{पपात वसुधायां तु छिन्नमूल इवद्रुमः}
 
 
 \twolineshloka
@@ -3382,7 +3384,7 @@
 
 \twolineshloka
 {अयं हर्यश्वयुग्जैत्रो मघोनः स्यन्दनोत्तमः}
-{`त्वदर्थमिह संप्राप्तः संदेशाद्वै शतक्रतोः'}
+{त्वदर्थमिह संप्राप्तः संदेशाद्वै शतक्रतोः}
 
 
 \twolineshloka
@@ -3539,7 +3541,7 @@
 
 \twolineshloka
 {उवाच रामो वैदेहीं परामर्शविशङ्कितः}
-{`लक्षयित्वेङ्गितं सर्वं प्रियं तस्यै निवेद्य सः'}
+{लक्षयित्वेङ्गितं सर्वं प्रियं तस्यै निवेद्य सः}
 
 
 \threelineshloka
@@ -3630,20 +3632,22 @@
 {}
 
 
-\threelineshloka
+\twolineshloka
 {अहमन्तःशरीरस्थो भूतानां रघुनन्दन}
-{सुसूक्ष्ममपि काकुत्स्थ मैथिलीनापराध्यति ॥वरुण उवाच}
-{}
+{सुसूक्ष्ममपि काकुत्स्थ मैथिलीनापराध्यति}
+
+\uvacha{वरुण उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {रसावै मत्प्रसूता हि भूतदेहेषु राघव}
-{अहंवै त्वां प्रब्रवीमि मैथिली प्रतिगृह्यताम् ॥यम उवाच}
-{}
+{अहंवै त्वां प्रब्रवीमि मैथिली प्रतिगृह्यताम्}
+
+\uvacha{यम उवाच}
 
 
 \threelineshloka
-{`धर्मोऽहमस्मि काकुत्स्थ साक्षी लोकस्य कर्मणाम्}
+{धर्मोऽहमस्मि काकुत्स्थ साक्षी लोकस्य कर्मणाम्}
 {शुभाशुभानां सीतेयमपापा प्रतिगृह्यताम्' ॥ब्र्हमोवाच}
 {}
 
@@ -3673,22 +3677,25 @@
 {शतधाऽस्य फलेन्मूर्धा इत्युक्तः सोभवत्पुरा}
 
 
-\threelineshloka
+\twolineshloka
 {नात्रशङ्का त्वया कार्या प्रतीच्छेमां महामते}
-{कृतं त्वया महत्कार्यं देवानाममितप्रभ ॥दशरथ उवाच}
-{}
+{कृतं त्वया महत्कार्यं देवानाममितप्रभ}
+
+\uvacha{दशरथ उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {प्रीतोस्मि वत्स भद्रं ते पिता दशरथोस्मि ते}
-{अनुजानामि राज्यं च प्रशाधि पुरुषोत्तम ॥राम उवाच}
-{}
+{अनुजानामि राज्यं च प्रशाधि पुरुषोत्तम}
+
+\uvacha{राम उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {अभिवादयेत्वां राजेन्द्र यदि त्वं जनको मम}
-{गमिष्यामि पुरीं रम्यामयोध्यां शासनात्तव ॥मार्कण्डेय उवाच}
-{}
+{गमिष्यामि पुरीं रम्यामयोध्यां शासनात्तव}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \threelineshloka
@@ -3814,7 +3821,7 @@
 
 \threelineshloka
 {सतत्रमलदिग्धाङ्गं भरतं चीरवाससम्}
-{`नन्दिग्रामगतंरामः सशत्रुघ्नं सराघवः'}
+{नन्दिग्रामगतंरामः सशत्रुघ्नं सराघवः}
 {अग्रतःपादुके कृत्वा ददर्शासीनमासने}
 
 
@@ -3924,10 +3931,11 @@
 {जात्यन्तरगता राजन्नेतद्बुद्ध्याऽनुचिन्तय}
 
 
-\threelineshloka
+\twolineshloka
 {तस्मात्सर्वं कुरुश्रेष्ठ मा शुचो भरतर्षभ}
-{त्वद्विधा हि महात्मानो न शोचन्ति परंतप ॥वैशंपायन उवाच}
-{}
+{त्वद्विधा हि महात्मानो न शोचन्ति परंतप}
+
+\uvacha{वैशंपायन उवाच}
 
 
 \twolineshloka
