--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -32,6 +32,11 @@
     \input{valmiki-ramayanam/HanumajjanakiSamvada.tex}
     \input{valmiki-ramayanam/Hanumadupadesha.tex}
     \input{valmiki-ramayanam/HanumadBharataSambhashanam.tex}
+    \input{bhagavatam/bhagavatam-09-10.tex}
+    \input{bhagavatam/bhagavatam-09-11.tex}
+    \input{narayaniyam/dashakam-34.tex}
+    \input{narayaniyam/dashakam-35.tex}
+    \input{mahabharatam/ramopakhyanaparva.tex}
     
 \end{center}
 
