--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -1325,7 +1325,10 @@
 
 
 % Check verse!
-सर्वभूतरुतज्ञा शृणु सर्वं कपीश्वर ॥केन चाश्रयवान्प्राप्तो ममैप भ्रातृगन्धिकः
+\twolineshloka
+{सर्वभूतरुतज्ञा शृणु सर्वं कपीश्वर}
+{केन चाश्रयवान्प्राप्तो ममैष भ्रातृगन्धिकः}
+
 \twolineshloka
 {चिन्तयित्वा मुहूर्तं तु तारा ताराधिपप्रभा}
 {पतिमित्यब्रवीत्प्राज्ञा शृणु सर्वं कपीश्वर}
