--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -206,10 +206,11 @@
 {जुहोत्यग्नौ दुराधर्षस्तेनातुष्यज्जगत्प्रभुः}
 
 
-\threelineshloka
+\twolineshloka
 {ततो ब्रह्मा स्वयं गत्वा तपसस्तान्न्यवारयत्}
-{प्रलोभ्यवरदानेन सर्वानेवपृथक्पृथक् ॥ब्राह्मोवाच}
-{}
+{प्रलोभ्यवरदानेन सर्वानेवपृथक्पृथक्}
+
+\uvacha{ब्राह्मोवाच}
 
 
 \twolineshloka
@@ -229,10 +230,11 @@
 \uvacha{रावण उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {गन्धर्वदेवासुरतो यक्षराक्षसतस्तथा}
-{सर्पकिंनरभूतेभ्यो न मे भूयात्पराभवः ॥ब्रह्मोवाच}
-{}
+{सर्पकिंनरभूतेभ्यो न मे भूयात्पराभवः}
+
+\uvacha{ब्रह्मोवाच}
 
 
 \twolineshloka
@@ -260,10 +262,11 @@
 \uvacha{विभीषण उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {परमापद्गतस्यापि नाधर्मे मे मतिर्भवेत्}
-{अशिक्षितं च भगवन्ब्रह्मास्त्रं प्रतिभातु मे ॥ब्रह्मोवाच}
-{}
+{अशिक्षितं च भगवन्ब्रह्मास्त्रं प्रतिभातु मे}
+
+\uvacha{ब्रह्मोवाच}
 
 
 \twolineshloka
@@ -324,10 +327,11 @@
 {}
 
 
-\threelineshloka
+\twolineshloka
 {ततो ब्रह्मर्षयः सर्वे सिद्धा देवर्षयस्तथा}
-{हव्यवाहं पुरस्कृत्य ब्रह्माणं शरणं गताः ॥अग्निरुवाच}
-{}
+{हव्यवाहं पुरस्कृत्य ब्रह्माणं शरणं गताः}
+
+\uvacha{अग्निरुवाच}
 
 
 \twolineshloka
@@ -335,10 +339,11 @@
 {अवध्यो वरदानेन कृतो भगवता पुरा}
 
 
-\threelineshloka
+\twolineshloka
 {स बाधते प्रजाः सर्वा विप्रकारैर्महाबलः}
-{ततो नस्त्रातु भगवान्नान्यस्त्राता हि विद्यते ॥ब्रह्मोवाच}
-{}
+{ततो नस्त्रातु भगवान्नान्यस्त्राता हि विद्यते}
+
+\uvacha{ब्रह्मोवाच}
 
 
 \twolineshloka
@@ -537,11 +542,12 @@
 {राजानं तर्जयन्तीव मधुरं वाक्यमब्रवीत्}
 
 
-\fourlineindentedshloka
+\threelineshloka
 {सत्यप्रतिज्ञ यन्मे त्वं काममेकं विसृष्टवान्}
 {उपाकुरुष्व तद्राजंस्तस्मान्मुञ्चस्व संकटात्}
-{तदद्य कुरु सत्यं मे वरं वरद भूपते' ॥राजोवाच}
-{}
+{तदद्य कुरु सत्यं मे वरं वरद भूपते}
+
+\uvacha{राजोवाच}
 
 
 \twolineshloka
@@ -3287,7 +3293,10 @@
 
 
 % Check verse!
-रावणः शोकमोहार्तो वैदेहीं हन्तुमुद्यतः ॥ङ्गमादाय दुष्टात्मा जवेनाभिपपात ह
+रावणः शोकमोहार्तो वैदेहीं हन्तुमुद्यतः
+ङ्गमादाय दुष्टात्मा जवेनाभिपपात ह
+
+
 \twolineshloka
 {तं दृष्ट्वातस्य दुर्बुद्देरविन्ध्यः पापनिश्चयम्}
 {शमयामास संक्रुद्धं श्रूयतां येन हेतुना}
@@ -3379,10 +3388,11 @@
 {इत्युक्त्वाऽभ्यहनद्रामो लक्ष्मणश्चात्मरूपकान्}
 
 
-\threelineshloka
+\twolineshloka
 {ततो हर्यश्वयुक्तेन रथेनादित्यवर्चसा}
-{उपतस्थे रणे रामं मातलिः शक्रसारथिः ॥मातलिरुवाच}
-{}
+{उपतस्थे रणे रामं मातलिः शक्रसारथिः}
+
+\uvacha{मातलिरुवाच}
 
 
 \twolineshloka
@@ -3422,7 +3432,7 @@
 
 \twolineshloka
 {[दशकन्धरराजसून्वोस्तथा युद्धमभून्महत्}
-{अलब्धोपममन्यत्रतयोरेव तथाऽभवत् ॥]}
+{अलब्धोपममन्यत्रतयोरेव तथाऽभवत्}
 
 
 \twolineshloka
@@ -3623,16 +3633,18 @@
 {तथा मे देव निर्दिष्टस्त्वमेव हि पतिर्भव}
 
 
-\threelineshloka
+\twolineshloka
 {ततोऽन्तरिक्षे वागारीत्सुभगा लोकसाक्षिणी}
-{पुण्यासंहर्षणी तेषां वानराणां महात्मनाम् ॥वायुरुवाच}
-{}
+{पुण्यासंहर्षणी तेषां वानराणां महात्मनाम्}
+
+\uvacha{वायुरुवाच}
 
 
-\threelineshloka
+\twolineshloka
 {बोभो राघव सत्यं वै वायुरस्मि सदागतिः}
-{अपापा मैथिली राजन्संगच्छसहभार्यया ॥अग्निरुवाच}
-{}
+{अपापा मैथिली राजन्संगच्छसहभार्यया}
+
+\uvacha{अग्निरुवाच}
 
 
 \twolineshloka
@@ -3649,10 +3661,11 @@
 \uvacha{यम उवाच}
 
 
-\threelineshloka
+\twolineshloka
 {धर्मोऽहमस्मि काकुत्स्थ साक्षी लोकस्य कर्मणाम्}
-{शुभाशुभानां सीतेयमपापा प्रतिगृह्यताम्' ॥ब्र्हमोवाच}
-{}
+{शुभाशुभानां सीतेयमपापा प्रतिगृह्यताम्}
+
+\uvacha{ब्र्हमोवाच}
 
 
 \twolineshloka
